--- a/iso639.cabal
+++ b/iso639.cabal
@@ -24,3 +24,11 @@ cabal-version:       >=1.8
 library
   exposed-modules:     Data.LanguageCodes
   build-depends:       base >=4.6 && <5
+
+test-suite tests
+  type:                exitcode-stdio-1.0
+  main-is:             Test.hs
+  build-depends:       base >=4.6 && <5
+                     , iso639
+                     , hspec
+  hs-source-dirs:      test
