move iso639_1 code to submodule (Data.Language.ISO639_1) exporting it as Data.LanguageCodes for legacy reasons

--- a/iso639.cabal
+++ b/iso639.cabal
@@ -24,6 +24,7 @@ cabal-version:       >=1.8
 library
   exposed-modules:     Data.LanguageCodes
   build-depends:       base >=4.6 && <5
+  exposed-modules:     Data.LanguageCodes.ISO639_1
 
 test-suite tests
   type:                exitcode-stdio-1.0
